@@ -3104,6 +3104,11 @@ This option exists only if Bochs compiled with BX_CPU_LEVEL >= 6.
 Select XSAVEOPT instruction support.
 This option exists only if Bochs compiled with BX_CPU_LEVEL >= 6.
 </para>
+<para><command>avx</command></para>
+<para>
+Select AVX instruction set support.
+This option exists only if Bochs compiled with --enable-avx option.
+</para>
 <para><command>1g_pages</command></para>
 <para>
 Enable 1G page size support in long mode.
